--- a/src/app/feature/test-gis/test-gis.component.scss
+++ b/src/app/feature/test-gis/test-gis.component.scss
@@ -35,6 +35,24 @@
     }
 }
 
+.theme-divider {
+    width: 1px;
+    height: 28px;
+    background-color: #d1d5db;
+    margin: 0 4px;
+}
+
+.theme-label {
+    font-size: 13px;
+    font-weight: 600;
+    color: #374151;
+    white-space: nowrap;
+}
+
+.theme-select {
+    min-width: 220px;
+}
+
 // Drawing Controls
 .drawing-controls {
     position: absolute;
